# poliresearch-ars

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
corpus/: ai_scientist_v2.txt  coscientist.txt  robin_ripasudil.txt
docs/: ARCHITECTURE.md  FINDINGS-efficiency-measurement.md  FINDINGS-token-optimization.md  FINDINGS-tokenguard-routing.md  IMPROVEMENTS.md  RELATED_WORK.md
eval/datasets/: citations.json  citations_adversarial.json  experiments.json  experiments_adversarial.json  falsification.json  falsification_adversarial.json
examples/: demo.py  sample_bibliography.json  sample_bibliography_csai.json  sample_claims.json  sample_experiment.py
src/poliresearch/: __init__.py  arxiv_verifier.py  bridges.py  checklist.py  citation_verifier.py  claim_graph.py  cli.py  config.py  core_verifier.py  corpus.py  corpus_builder.py  discovery.py  domain.py  experiment.py  fulltext.py  keyed_rest.py  llm.py  memory.py  models.py  obsidian.py  openalex_verifier.py  pipeline.py  provenance.py  pubmed_verifier.py  reference_verification.py  retrieval.py  semantic_scholar_verifier.py  sources.py  world_model.py
src/poliresearch/agents/: __init__.py  experimenter.py  falsifier.py  generator.py  verifier.py
tests/: test_arxiv_and_domain.py  test_checklist.py  test_citation_verifier.py  test_claim_graph.py  test_corpus_and_worldmodel.py  test_discovery.py  test_evaluation.py  test_experiment.py  test_falsifier.py  test_improvements.py  test_keyed_sources.py  test_llm_backends.py  test_more_sources.py  test_obsidian.py  test_retrieval_memory_fulltext.py
(+5 files in other folders)
