[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poliresearch"
version = "0.1.0"
description = "Falsification-first, verification-gated AI research system"
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
tracking = ["mlflow>=2.12"]

[project.scripts]
poliresearch = "poliresearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
